Cleaning up code and adding diagrams to README

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
+  <groupId>com.solace.beam.sample</groupId>
   <artifactId>word-count-beam</artifactId>
   <version>0.1</version>
 
@@ -98,6 +98,20 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>${maven-jar-plugin.version}</version>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <configuration>
+          <executable>java</executable>
+          <arguments>
+            <argument>-classpath</argument>
+            <classpath />
+            <argument>com.solace.beam.sample.StreamingWordCount</argument>
+          </arguments>
+        </configuration>
       </plugin>
 
       <!--
@@ -311,6 +325,8 @@
       <artifactId>beam-sdks-java-io-google-cloud-platform</artifactId>
       <version>${beam.version}</version>
     </dependency>
+
+
 
     <!-- Dependencies below this line are specific dependencies needed by the examples code. -->
     <dependency>
